- include dictionaryapi.dev - improve vocabulary matching to Cambridge dictionary